force-app/main/default/objects/Opportunity/fields/Added_To_Annual_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Annual_Email_List__c</fullName>
    <description>Added_To_Annual_Email_List__c</description>
    <label>Added To Annual Email List</label>
    <type>Date</type>
</CustomField>