force-app/main/default/objects/Opportunity/fields/Annual_Salary_High__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary_High__c</fullName>
    <label>Annual Salary High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>