force-app/main/default/objects/Opportunity/fields/Archive_Slack__c.field-meta.xml
<CustomField>
    <fullName>Archive_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive Slack</label>
    <type>Checkbox</type>
</CustomField>