force-app/main/default/objects/Opportunity/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Account.BillingStreet&amp; BR()&amp; Account.BillingCity &amp; &quot;,&quot;&amp; Account.BillingState &amp;&quot; &quot;&amp; Account.BillingPostalCode &amp; BR() &amp; Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>