force-app/main/default/objects/Opportunity/fields/BK_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>BK_Add_Ons__c</fullName>
    <formula>IF(INCLUDES( Account.BK_Add_Ons__c ,&quot;Additional accounts to reconcile&quot;),&quot;Additional accounts to reconcile&quot;,Null)&amp;
IF(INCLUDES( Account.BK_Add_Ons__c ,&quot;Transaction volume over maximum&quot;),&quot;Transaction volume over maximum&quot;,Null)&amp;&quot; | &quot;&amp;
IF(INCLUDES( Account.BK_Add_Ons__c ,&quot;Inputting customer invoices, sending reminders&quot;),&quot;Inputting customer invoices, sending reminders&quot;,Null)&amp;&quot; | &quot;&amp;
IF(INCLUDES( Account.BK_Add_Ons__c ,&quot;Bill payments&quot;),&quot;Bill payments&quot;,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK Add-Ons</label>
    <type>Text</type>
</CustomField>