force-app/main/default/objects/Opportunity/fields/BK_Months_Started__c.field-meta.xml
<CustomField>
    <fullName>BK_Months_Started__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BK Months Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>