force-app/main/default/objects/Opportunity/fields/BK_Plan__c.field-meta.xml
<CustomField>
    <fullName>BK_Plan__c</fullName>
    <formula>TEXT(Account.BK_Plan__c)</formula>
    <label>BK Plan</label>
    <type>Text</type>
</CustomField>