force-app/main/default/objects/Opportunity/fields/BTR_Extension_Year__c.field-meta.xml
<CustomField>
    <fullName>BTR_Extension_Year__c</fullName>
    <label>BTR Extension Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>