force-app/main/default/objects/Opportunity/fields/Business_Name_Federal__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Federal__c</fullName>
    <formula>Account.Business_Name_Federal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name Federal</label>
    <type>Text</type>
</CustomField>