force-app/main/default/objects/Opportunity/fields/Business_Solution_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Business_Solution_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Solution Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Business_Solution_Advisor</relationshipName>
    <type>Lookup</type>
</CustomField>