force-app/main/default/objects/Opportunity/fields/CaseSafe_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe ID</label>
    <type>Text</type>
</CustomField>