force-app/main/default/objects/Opportunity/fields/Check_QBO_for_Financials_at__c.field-meta.xml
<CustomField>
    <fullName>Check_QBO_for_Financials_at__c</fullName>
    <label>Check QBO for Financials at</label>
    <type>DateTime</type>
</CustomField>