force-app/main/default/objects/Opportunity/fields/Churn_Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Churn_Sub_Types__c</fullName>
    <label>Churn Sub-Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Churn_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can&apos;t Accommodate Member Request</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Accounting</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Corporation / MMLLC</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Employees</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Hypergrowth</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Software</fullName>
            </value>
            <value>
                <fullName>Cannot Support - State</fullName>
            </value>
            <value>
                <fullName>Cannot Support - Tax</fullName>
            </value>
            <value>
                <fullName>Closing Business</fullName>
            </value>
            <value>
                <fullName>Competitive Service Better Fit</fullName>
            </value>
            <value>
                <fullName>Declining Business/Revenue/Income</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with Communication Times / Process</fullName>
            </value>
            <value>
                <fullName>Initial Expectations Not Properly Set</fullName>
            </value>
            <value>
                <fullName>Took Job</fullName>
            </value>
            <value>
                <fullName>Malicious Member</fullName>
            </value>
            <value>
                <fullName>Member Not Cooperating</fullName>
            </value>
            <value>
                <fullName>Negative Online Review</fullName>
            </value>
            <value>
                <fullName>No Feedback / No Details Provided / Unresponsive</fullName>
            </value>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Product Value</fullName>
            </value>
            <value>
                <fullName>Quality / Accuracy</fullName>
            </value>
            <value>
                <fullName>Quality / Accuracy - Accounting</fullName>
            </value>
            <value>
                <fullName>Quality / Accuracy - Onboarding</fullName>
            </value>
            <value>
                <fullName>Quality / Accuracy - Tax</fullName>
            </value>
            <value>
                <fullName>Quality / Accuracy - Timing</fullName>
            </value>
            <value>
                <fullName>System Issue(s) / Bugs / Security Concerns</fullName>
            </value>
            <value>
                <fullName>Too Much Administration for Member</fullName>
            </value>
            <value>
                <fullName>Wants Higher Touch Service</fullName>
            </value>
            <value>
                <fullName>Wanted Entity Setup</fullName>
            </value>
            <value>
                <fullName>Tax Related</fullName>
                <isActive>false</isActive>
                <label>Tax Related</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>