force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Fit (Unsupported Entity - C-Corp)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - PLLC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - PC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Entity - MM LLC)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported State)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Low Self-Employed Profit)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unfiled Tax Returns)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Unsupported Profession)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Non-citizen)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Sales Tax)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Employees)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Foreign Assets &gt;50k)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Inventory)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Crypto)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Accrual Accounting Needed)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Took W-2 Job)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Passive Income)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Multiple Businesses)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Out of Compliance)</fullName>
            </value>
            <value>
                <fullName>Stopped Communicating</fullName>
            </value>
            <value>
                <fullName>Not Interested (Price Too High)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Using Local CPA)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Using Other FinTech Services)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Remain LLC/SP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>