force-app/main/default/objects/Opportunity/fields/Closed_Won_at__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_at__c</fullName>
    <label>Closed Won at</label>
    <type>DateTime</type>
</CustomField>