force-app/main/default/objects/Opportunity/fields/Confirm_Acceptance_at__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Acceptance_at__c</fullName>
    <label>Confirm Acceptance at</label>
    <type>DateTime</type>
</CustomField>