force-app/main/default/objects/Opportunity/fields/Confirm_Esignature_Completed__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Esignature_Completed__c</fullName>
    <label>Confirm Esignature Completed</label>
    <type>DateTime</type>
</CustomField>