force-app/main/default/objects/Opportunity/fields/Confirm_Organizer_Receipt_at__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Organizer_Receipt_at__c</fullName>
    <label>Confirm Organizer Receipt at</label>
    <type>DateTime</type>
</CustomField>