force-app/main/default/objects/Opportunity/fields/Confirm_Payment_At__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Payment_At__c</fullName>
    <label>Confirm Payment At</label>
    <type>DateTime</type>
</CustomField>