force-app/main/default/objects/Opportunity/fields/Confirm_Training_Call_Scheduled_at__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Training_Call_Scheduled_at__c</fullName>
    <label>Confirm Training Call Scheduled at</label>
    <type>DateTime</type>
</CustomField>