force-app/main/default/objects/Opportunity/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF(
	NOT(ISNULL(Primary_Contact__r.Full_Name__c )),
	Primary_Contact__r.Full_Name__c,
	&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>