force-app/main/default/objects/Opportunity/fields/CP_to_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>CP_to_Close_Days__c</fullName>
    <formula>DATEVALUE( Closed_Won_at__c) - DATEVALUE(  Confirm_Payment_At__c )</formula>
    <label>CP to Close Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>