force-app/main/default/objects/Opportunity/fields/Days_since_Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Initial_Payment__c</fullName>
    <formula>TODAY()-  First_Payment_Date__c</formula>
    <label>Days since Initial Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>