force-app/main/default/objects/Opportunity/fields/Days_since_Organizer_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Organizer_Received__c</fullName>
    <formula>NOW()- Pre_Screen_at__c</formula>
    <label>Days since Organizer Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>