force-app/main/default/objects/Opportunity/fields/Eligible_at__c.field-meta.xml
<CustomField>
    <fullName>Eligible_at__c</fullName>
    <label>Eligible At</label>
    <type>DateTime</type>
</CustomField>