force-app/main/default/objects/Opportunity/fields/Eligible_to_CP_Days__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_CP_Days__c</fullName>
    <formula>DATEVALUE(  Confirm_Payment_At__c ) - DATEVALUE(  Eligible_at__c  )</formula>
    <label>Eligible to CP Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>