force-app/main/default/objects/Opportunity/fields/Email_Sequence_Request__c.field-meta.xml
<CustomField>
    <fullName>Email_Sequence_Request__c</fullName>
    <label>Email Sequence Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Reengage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>