force-app/main/default/objects/Opportunity/fields/Emoji_Update__c.field-meta.xml
<CustomField>
    <fullName>Emoji_Update__c</fullName>
    <label>Emoji Update</label>
    <length>250</length>
    <type>Text</type>
</CustomField>