force-app/main/default/objects/Opportunity/fields/Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Number__c</fullName>
    <formula>Account.Entity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Number</label>
    <type>Text</type>
</CustomField>