force-app/main/default/objects/Opportunity/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <formula>Account.Establishment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Establishment Date</label>
    <type>Date</type>
</CustomField>