force-app/main/default/objects/Opportunity/fields/File_Return_at__c.field-meta.xml
<CustomField>
    <fullName>File_Return_at__c</fullName>
    <label>File Return at</label>
    <type>DateTime</type>
</CustomField>