force-app/main/default/objects/Opportunity/fields/First_Payment_to_Kickoff_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_to_Kickoff_Call_Time__c</fullName>
    <formula>Kickoff_Call_Date__c -  First_Payment_Date__c</formula>
    <inlineHelpText>--&gt; How long until they complete kickoff call (KO call minus First Payment)</inlineHelpText>
    <label>First Payment to Kickoff Call Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>