force-app/main/default/objects/Opportunity/fields/First_Payment_to_Running_Flow_time__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_to_Running_Flow_time__c</fullName>
    <formula>IF(NOT(ISBLANK( Running_Start_Date__c )), Running_Start_Date__c - First_Payment_Date__c  ,Null)</formula>
    <inlineHelpText>--&gt; How long does it take to enter running flow (from first payment)</inlineHelpText>
    <label>First Payment to Running Flow time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>