force-app/main/default/objects/Opportunity/fields/Foreign_Assets__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Assets__c</fullName>
    <formula>Account.Foreign_Assets__c</formula>
    <label>Foreign Assets</label>
    <type>Text</type>
</CustomField>