force-app/main/default/objects/Opportunity/fields/Foreign_Registration_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Registration_Effective_Date__c</fullName>
    <label>Foreign Registration Effective Date</label>
    <type>Date</type>
</CustomField>