force-app/main/default/objects/Opportunity/fields/Foreign_Registration_Required__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Registration_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign Registration Required?</label>
    <type>Checkbox</type>
</CustomField>