force-app/main/default/objects/Opportunity/fields/Formula_Test__c.field-meta.xml
<CustomField>
    <fullName>Formula_Test__c</fullName>
    <formula>RIGHT(  CaseSafe_ID__c  ,9)</formula>
    <label>Formula Test</label>
    <type>Text</type>
</CustomField>