force-app/main/default/objects/Opportunity/fields/Head_of_Tax__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Tax</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>