force-app/main/default/objects/Opportunity/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <formula>Account.Home_Address__c</formula>
    <label>Home Address</label>
    <type>Text</type>
</CustomField>