force-app/main/default/objects/Opportunity/fields/Intro_Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Completed_Date__c</fullName>
    <label>Intro Call Completed Date</label>
    <type>DateTime</type>
</CustomField>