force-app/main/default/objects/Opportunity/fields/Intro_Call_to_Running_Flow_Time__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_to_Running_Flow_Time__c</fullName>
    <formula>IF(NOT(ISBLANK( Running_Start_Date__c )),  Running_Start_Date__c - DATEVALUE(Intro_Call_Completed_Date__c) ,Null)</formula>
    <inlineHelpText>--&gt; How long does it take to enter running flow (from Intro Call</inlineHelpText>
    <label>Intro Call to Running Flow Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>