force-app/main/default/objects/Opportunity/fields/Intro_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Date__c</fullName>
    <description>How long until they become paying member</description>
    <formula>IF(AND( NOT(ISBLANK(First_Payment_Date__c)), NOT(ISBLANK(Intro_Call_Completed_Date__c))),First_Payment_Date__c - DATEVALUE( Intro_Call_Completed_Date__c),Null)</formula>
    <inlineHelpText>How long until they become paying member</inlineHelpText>
    <label>Paying Member Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>