force-app/main/default/objects/Opportunity/fields/ITR_Extension_Year_C__c.field-meta.xml
<CustomField>
    <fullName>ITR_Extension_Year_C__c</fullName>
    <label>ITR Extension Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>