force-app/main/default/objects/Opportunity/fields/Kickoff_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Date__c</fullName>
    <label>Kickoff Call Date</label>
    <type>Date</type>
</CustomField>