force-app/main/default/objects/Opportunity/fields/Kickoff_Stage__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Stage__c</fullName>
    <label>Kickoff Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Complete Questionnaire</fullName>
            </value>
            <value>
                <fullName>Schedule Call</fullName>
            </value>
            <value>
                <fullName>Reschedule Call</fullName>
            </value>
            <value>
                <fullName>Take Call</fullName>
            </value>
            <value>
                <fullName>Approve Plan</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>