force-app/main/default/objects/Opportunity/fields/KO_Call_to_TP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>KO_Call_to_TP_Submitted__c</fullName>
    <formula>IF(NOT(ISBLANK(Transition_Submitted__c)), (DATEVALUE(Transition_Submitted__c) - (Kickoff_Call_Date__c)),Null)</formula>
    <inlineHelpText>--&gt; How long after kickoff does transition plan get submitted</inlineHelpText>
    <label>KO Call to Transition Plan Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>