force-app/main/default/objects/Opportunity/fields/Last_Completed_Task__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Task__c</fullName>
    <label>Last Completed Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>