force-app/main/default/objects/Opportunity/fields/Last_Completed_Task_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Task_At__c</fullName>
    <label>Last Completed Task At</label>
    <type>DateTime</type>
</CustomField>