force-app/main/default/objects/Opportunity/fields/Last_Offered_BK_Plan__c.field-meta.xml
<CustomField>
    <fullName>Last_Offered_BK_Plan__c</fullName>
    <label>Last Offered BK Plan</label>
    <type>Date</type>
</CustomField>