force-app/main/default/objects/Opportunity/fields/Last_QA_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_QA_Check__c</fullName>
    <description>This field is manually populated by MS and is being used for reporting purpose only. No automation or integration with external systems are required.</description>
    <label>Last QA Check</label>
    <type>Date</type>
</CustomField>