force-app/main/default/objects/Opportunity/fields/Last_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage__c</fullName>
    <label>Last Stage</label>
    <length>254</length>
    <type>Text</type>
</CustomField>