force-app/main/default/objects/Opportunity/fields/Last_Stage_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Changed_At__c</fullName>
    <label>Last Stage Changed At</label>
    <type>DateTime</type>
</CustomField>