force-app/main/default/objects/Opportunity/fields/Lighting_URL__c.field-meta.xml
<CustomField>
    <fullName>Lighting_URL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_550, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_550)) &amp; Id,LEFT($Api.Partner_Server_URL_550, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_550)) &amp; Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lighting URL</label>
    <type>Text</type>
</CustomField>