force-app/main/default/objects/Opportunity/fields/Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Detail__c</fullName>
    <description>Fill in Closed Lost Details here</description>
    <label>Lost Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>