force-app/main/default/objects/Opportunity/fields/LTC_At__c.field-meta.xml
<CustomField>
    <fullName>LTC_At__c</fullName>
    <label>LTC At</label>
    <type>DateTime</type>
</CustomField>