force-app/main/default/objects/Opportunity/fields/LTC_By__c.field-meta.xml
<CustomField>
    <fullName>LTC_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LTC By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>