force-app/main/default/objects/Opportunity/fields/LTC_Subject__c.field-meta.xml
<CustomField>
    <fullName>LTC_Subject__c</fullName>
    <label>LTC Subject</label>
    <length>200</length>
    <type>Text</type>
</CustomField>