force-app/main/default/objects/Opportunity/fields/Member_Flags__c.field-meta.xml
<CustomField>
    <fullName>Member_Flags__c</fullName>
    <label>Member Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Touch QBO</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Incidental Sales Tax</fullName>
            </value>
            <value>
                <fullName>1040 Opt Out</fullName>
            </value>
            <value>
                <fullName>1040 Opt Out - PY Unfiled Returns</fullName>
            </value>
            <value>
                <fullName>Foreign Activity Acknowledgement Received</fullName>
            </value>
            <value>
                <fullName>Re-Domesticating</fullName>
            </value>
            <value>
                <fullName>Dormant Member Churn Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>