force-app/main/default/objects/Opportunity/fields/Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Notes__c</fullName>
    <label>Member Notes</label>
    <type>Url</type>
</CustomField>