force-app/main/default/objects/Opportunity/fields/Member_Ops__c.field-meta.xml
<CustomField>
    <fullName>Member_Ops__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Ops</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>