force-app/main/default/objects/Opportunity/fields/Misc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Misc_Notes__c</fullName>
    <label>Misc Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>